<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/total_payment"
                        android:textColor="@color/v_color"
                        android:textSize="@dimen/fifteen_dip_text_size" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/fifteen_dip_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/payment_status"
                        android:textColor="@color/v_color"
                        android:textSize="@dimen/fifteen_dip_text_size" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/paymentStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/green2"
                        android:textSize="@dimen/fifteen_dip_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/payment_method"
                        android:textColor="@color/v_color"
                        android:textSize="@dimen/fifteen_dip_text_size" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/paymentMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen_dip_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/payment_dat_amp_time"
                        android:textColor="@color/v_color"
                        android:textSize="@dimen/fifteen_dip_text_size" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/paymentTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen_dip_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/payment_id"
                        android:textColor="@color/v_color"
                        android:textSize="@dimen/fifteen_dip_text_size" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/paymentId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen_dip_text_size" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@+id/constraint5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:id="@+id/linearLayoutMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/total"
                            android:textColor="@color/black"
                            android:textSize="@dimen/fifteen_dip_text_size" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/totalAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/black3"
                            android:textSize="@dimen/twelve_dip_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/codeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/promoCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/blue2"
                            android:textSize="@dimen/twelve_dip_text_size" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="end"
                            android:text="saved"
                            android:textColor="@color/blue2"
                            android:textSize="@dimen/ten_dip_text_size" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/promoCodeCost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/blue2"
                            android:textSize="@dimen/twelve_dip_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/other_charges"
                            android:textColor="@color/black"
                            android:textSize="@dimen/twelve_dip_text_size" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/otherCharges"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/black3"
                            android:textSize="@dimen/twelve_dip_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/taxes"
                            android:textColor="@color/black"
                            android:textSize="@dimen/twelve_dip_text_size" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/taxes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/black3"
                            android:textSize="@dimen/twelve_dip_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/yellow"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/grand_total"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/fifteen_dip_text_size" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/grandTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/fifteen_dip_text_size" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>