<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/login"
                        android:textColor="@color/blue"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraint5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/cardView1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="5dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/constraint7"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <com.google.android.material.card.MaterialCardView
                                        android:id="@+id/cardViewFlag"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_margin="8dp"
                                        app:cardCornerRadius="40dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toStartOf="@+id/ed_phoneNo"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <ImageView
                                            android:id="@+id/countryFlag"
                                            android:layout_width="40dp"
                                            android:layout_height="40dp"
                                            android:layout_gravity="center"
                                            android:adjustViewBounds="true"
                                            android:background="@drawable/circular"
                                            android:contentDescription="@string/todo"
                                            android:scaleType="fitXY"
                                            android:src="@drawable/india_flag" />

                                    </com.google.android.material.card.MaterialCardView>

                                    <EditText
                                        android:id="@+id/ed_phoneNo"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:background="@null"
                                        android:hint="@string/india_911"
                                        android:layout_marginStart="10dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toEndOf="@+id/cardViewFlag"
                                        app:layout_constraintTop_toTopOf="parent" />

                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </com.google.android.material.card.MaterialCardView>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/contine_Btm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/blue"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Continue"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/getTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:paddingStart="5dp"
                        android:paddingEnd="14sp"
                        android:textSize="10dp"
                        android:text="@string/otp_sent"
                        android:textColor="@color/blue"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/mainicon1" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
